Use matches.get(0) instead of getFirst